--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SHADOOF</string>
+    <string name="app_name">IC-Shadoof</string>
     <string name="title_activity_menu_utama">MenuUtama</string>
     <string name="title_shop">Shop</string>
     <string name="title_gifts">Gifts</string>
